test/types/range/lydia/badRange-string-upper.good
badRange-string-upper.chpl:1: In function 'main':
badRange-string-upper.chpl:2: error: Range bounds must be integers of compatible types in param for-loops
